--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="framework.js" type="text/javascript"></script>
+    <script src="js/framework.js" type="text/javascript"></script>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<canvas id="canvas" width="850" height="650" style="border: 1px solid black">
-
-</canvas>
-<script src="wall.js" type="text/javascript"></script>
-<script src="player.js" type="text/javascript"></script>
-<script src="main.js" type="text/javascript"></script>
+<div id="canvas-container">
+    <canvas id="canvas" width="850" height="650">
+        Your browser doesn't support canvas
+    </canvas>
+</div>
+<script src="js/wall.js" type="text/javascript"></script>
+<script src="js/player.js" type="text/javascript"></script>
+<script src="js/point.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
