--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
@@ -7,6 +7,10 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <div id="score-and-lvl">
+        <p id="score">Score: 0000</p>
+        <p id="lvl">Level: 01</p>
+    </div>
 <div id="canvas-container">
     <canvas id="canvas" width="850" height="650">
         Your browser doesn't support canvas
