--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div id="score-and-lvl">
-        <p id="score">Score: 0000</p>
-        <p id="lvl">Level: 01</p>
-    </div>
+    <div id="score">Score: 0000</div>
 <div id="canvas-container">
     <canvas id="canvas" width="850" height="650">
         Your browser doesn't support canvas
     </canvas>
 </div>
-<script src="js/wall.js" type="text/javascript"></script>
-<script src="js/player.js" type="text/javascript"></script>
-<script src="js/point.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
+    <div id ="lvl">Level: 01</div>
+        <script src="js/wall.js" type="text/javascript"></script>
+        <script src="js/player.js" type="text/javascript"></script>
+        <script src="js/point.js" type="text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
