add bonuses, update field

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <canvas id="canvas" width="850" height="650">
         Your browser doesn't support canvas
     </canvas>
+    <h2>Points:</h2>
+    <p id="points"></p>
+    <h2>Lives:</h2>
+    <p id="lives"></p>
 </div>
 <script src="js/wall.js" type="text/javascript"></script>
 <script src="js/player.js" type="text/javascript"></script>
 <script src="js/point.js" type="text/javascript"></script>
+<script src="js/bonus.js" type="text/javascript"></script>
+<script src="js/ghost.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
