--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <!--adding a menu-->
+    <div id="menu">
+        <h1>Crux Man</h1>
+        <a href="#" class="play">Start the game</a> 
+    </div>
+    <!--adding a menu-->
+
     <div id="score">Score: 0000</div>
-<div id="canvas-container">
+    <div id="canvas-container">
     <canvas id="canvas" width="850" height="650">
         Your browser doesn't support canvas
     </canvas>
-</div>
+    </div>
     <div id ="lvl">Level: 01</div>
         <script src="js/wall.js" type="text/javascript"></script>
         <script src="js/player.js" type="text/javascript"></script>
         <script src="js/point.js" type="text/javascript"></script>
         <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/menu.js" type="text/javascript"></script>
 </body>
 </html>
