--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--adding a menu-->
     <div id="menu">
-        <h1>Crux Man</h1>
+        <h1>Welcome to CRUX Man Game</h1>
         <a href="#" class="play">Start the game</a> 
     </div>
     <!--adding a menu-->
