--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
         Your browser doesn't support canvas
     </canvas>
 </div>
-<div>
-    <h2 id="score">Points:</h2>
+<div id="info">
+    <div>
+        <h2 id="points">Points:</h2>
+    </div>
+    <div>
+        <h2 id="lives">Lives:</h2>
+    </div>
+    <div>
+        <h2 id="lvl">Level:</h2>
+    </div>
 </div>
-<div>
-    <h2 id="lives">Lives:</h2>
-</div>
-<div>
-    <h2 id="lvl">Level:</h2>
-</div>
-
 <script src="js/wall.js" type="text/javascript"></script>
 <script src="js/player.js" type="text/javascript"></script>
 <script src="js/point.js" type="text/javascript"></script>
