add end game menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <h1>Welcome to CRUX Man Game</h1>
     <a href="#" class="play">Start the game</a>
 </div>
+<div id="end-game">
+    <h2>Game Over</h2>
+    <p id="result"></p>
+    <a href="#" class="new">Start new game</a>
 
+</div>
 <div id="canvas-container">
     <canvas id="canvas" width="850" height="650">
         Your browser doesn't support canvas
@@ -36,6 +41,6 @@
 <script src="js/bonus.js" type="text/javascript"></script>
 <script src="js/ghost.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
-<script src="js/menu.js" type="text/javascript"></script>
+<script src="js/menu-and-game-over.js" type="text/javascript"></script>
 </body>
 </html>
