--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>CRUX MAN</title>
     <script src="js/framework.js" type="text/javascript"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
